Create annotations and generate Movie related docs
